# django-calendar-appointment

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
apps/appointments/: __init__.py  urls.py
apps/appointments/migrations/: 0001_initial.py
apps/appointments/models/: __init__.py  admin.py  appointment.py
apps/appointments/tasks/: appointments_tasks.py
apps/appointments/views/: __init__.py  api.py
config/: asgi.py  settings.py  urls.py  wsgi.py
